# swagger-output.json
@@ -3,10 +3,24 @@
   "info": {
     "version": "1.0.0",
     "title": "Farawin Test API",
-    "description": "برای استفاده آزمایشی..."
+    "description": "برای استفاده آزمایشی... \n username = mobile (regex /^09([0-9]{9})/)"
   },
   "host": "",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "User",
+      "description": "کاربران"
+    },
+    {
+      "name": "Contact",
+      "description": "مخاطبین"
+    },
+    {
+      "name": "Chat",
+      "description": "چت ها"
+    }
+  ],
   "schemes": [
     "https",
     "http"
@@ -18,8 +32,91 @@
     "application/json"
   ],
   "paths": {
+    "/api/contact": {
+      "post": {
+        "tags": [
+          "Contact"
+        ],
+        "summary": "افزودن مخاطب",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "نام کاربری که باید شماره موبایل باشد و نام و نام‌خانوداگی باید بیش از ۳ کرکتر باشد. ",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "09000000000"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "xxx"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Contact"
+        ],
+        "summary": "گرفتن تمام مخاطبین",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/api/user": {
       "post": {
+        "tags": [
+          "User"
+        ],
         "summary": "ثبت نام",
         "description": "",
         "parameters": [
@@ -63,6 +160,9 @@
         }
       },
       "get": {
+        "tags": [
+          "User"
+        ],
         "summary": "گرفتن تمام کاربران",
         "description": "",
         "parameters": [],
@@ -75,6 +175,9 @@
     },
     "/api/user/login": {
       "post": {
+        "tags": [
+          "User"
+        ],
         "summary": "ورود",
         "description": "",
         "parameters": [
@@ -104,6 +207,86 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/chat": {
+      "post": {
+        "tags": [
+          "Chat"
+        ],
+        "summary": "افزودن پیام",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "نام کاربری که باید شماره موبایل مخاطب باشد و پیام ارسالی که فرمت متن یا اچ تی ام ال. ",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "contactUsername": {
+                  "type": "string",
+                  "example": "09000000000"
+                },
+                "textHtml": {
+                  "type": "string",
+                  "example": ""
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Chat"
+        ],
+        "summary": "گرفتن تمام چت‌ها",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
